@@ -14,6 +14,7 @@ next version - not released yet
 + Append files to the playlist on drag&drop while holding "Control" key
 + Enable Press and Hold gesture to make easier access to context menu on touch devices
 + Add Danish translation
++ Ticket #3051, Support DTS Music Disk
 + Ticket #5147, Add /randomize command-line switch for playlist randomization
 + Ticket #5334, Allow to enable high precision timer also when Subresync bar is hidden.
   Right click on timer shows menu with options.
